แก้ไขหน้าล้อกอิน

--- a/frontend/src/pages/LoginPage/Style.css
+++ b/frontend/src/pages/LoginPage/Style.css
@@ -1,43 +1,4 @@
-.field {
-    position: relative;
-    left:25px;
-}
 
-.field input {
-    color: #565656;
-    background: none;
-    padding: 0.625rem;
-    border: 1px solid #003D06;
-    border-radius: 6px;
-    box-sizing: border-box;
-    outline: none;
-    width:220px;
-}
-
-.field label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(0.625rem, 0.425rem);
-    color: #030104;
-    background-color: white;
-    padding-inline-start: 0.25rem;
-    border: 1px solid transparent;
-    transition: transform 250ms, background-color 250ms, border-color 250ms;
-}
-
-.field:focus-within label,
-.field:not(:has(:placeholder-shown)) label {
-    transform: translate(0.625rem, -1rem);
-}
-
-.field ::placeholder {
-    color: transparent;
-}
-
-.field:focus-within input {
-    border-width: 1px solid #003D06; 
-}
 .Login-button{
     font-family: "Inter", sans-serif;
     font-size: 12px;
@@ -50,7 +11,7 @@
     padding: 5px 8px;
             /* แกนวาย-แกนเอ็กซ์ */
     top: 15px;
-    left: 105px;
+    left: 18px;
 }
 .Login-button:hover{
     background-color:#f88c64 !important;
@@ -72,4 +33,28 @@
 }
 .Register-button:hover{
     background-color:#FFE5B5 !important;
+}
+.Username-box{
+    width: 350px;
+    margin-left:20px ;
+}
+.Username-box:focus-within input{
+    border: 1px solid #F4794E;
+    box-shadow: 2px 2px 1px #F4794E;
+}
+.Username-box:hover input{
+    border: 1px solid #F4794E;
+}
+.Password-box{
+    width: 350px;
+    margin-left:20px ;
+    margin-top: -30px;
+}
+.ant-input-password:focus-within {
+    border: 1px solid #F4794E;
+    box-shadow: 2px 2px 1px #F4794E;
+}
+
+.ant-input-password:hover{
+    border: 1px solid #F4794E;
 }
